# somtodayapi_python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
examples/: README.md  get_rooster.py  get_student_info.py
somtodaydotpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
somtodaypython/: __init__.py  asynchronous_somtoday.py  nonasyncsomtoday.py
somtodaypython.egg-info/: PKG-INFO  SOURCES.txt
tests/: cijfercomparison.py  roostergroup.py  test_common.py
