[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "somtodaypython"
version = "1.1.0"
description = "Python package for interacting & fetching somtoday's data."
authors = ["luxkatana taseen.bibi@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
pytz = "2024.2"
