
[project]
name = "somtodaypython"
version = "1.2.2"
dynamic = ["dependencies"]
description = "Python package for interacting & fetching somtoday's data."
authors = [
    {name="luxkatana", email="taseen.bibi@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["api", "somtoday", "SOMtoday", "python", "somtodaypython"]
[project.urls]
Homepage = "https://github.com/luxkatana/somtodayapi_python"
Issues = "https://github.com/luxkatana/somtodayapi_python/issues"
Repository = "https://github.com/luxkatana/somtodayapi_python.git"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"
